2011-12-15  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSProcessInfo.m:
	* Source/NSSocketPort.m:
	* Source/NSMessagePortNameServer.m:
	* Source/NSDebug.m:
	* Source/NSDistributedLock.m:
	* Source/GSHTTPURLHandle.m:
	* Source/NSMessagePort.m:
	* Source/NSFileManager.m:
	* Source/NSString.m:
	* Source/NSObject.m:
	* Source/NSThread.m:
	* Source/NSData.m:
	* Source/GSNetwork.h:
	* Source/GSFormat.m:
	* Source/GSFileHandle.m:
	* Source/NSTask.m:
	* SSL/GSSSLHandle.m:
	* SSL/configure.ac:
	* SSL/configure:
	* SSL/config.h.in:
	* configure.ac:
	* configure:
	* Headers/GNUstepBase/config.h.in:
	* Tools/gdnc.m:
	Support fcntl.h and signal.h not being in the 'sys' subdirectory
	(for android and any other systems with that header layout).

2011-12-15  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/Foundation/NSObject.h:
	* Headers/Foundation/NSObjCRuntime.h:
	Move a few declarations between headers to match OSX, and update
	NSNotFound to be NSIntegerMax for compatibility on 64bit platforms.

2011-12-13  Richard Frith-Macdonald <rfm@gnu.org>

	* SSL/GSSSLHandle.m: Allow cipher list to be set using GSCipherList
	default.

2011-12-08  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* configure.ac: Fix pkg-config configuration for libffi to make it
	really work on systems where additional include options are
	needed.
	* configure: Regenerated.

2011-12-06  Richard Frith-Macdonald <rfm@gnu.org>

	* Tools/AGSParser.m: Fix suggested by Daniel Santos (ifStack was
	created with incorrect initial content).

2011-12-06  Richard Frith-Macdonald <rfm@gnu.org>

	* configure.ac: use pkg-config for libffi if/when available.
	* configure: regenerate

2011-12-05  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/NSFileManager.m:
	* Headers/Foundation/NSFileManager.h: Add removeItemAtPath:error:
	method, as a simple wrapper around removeFileAtPath:handler: with
	no handler.

2011-12-02  Richard Frith-Macdonald <rfm@gnu.org>
